--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<html>
+<?php
+/* This will give an error. Note the output
+ * above, which is before the header() call */
+header('Location: http://118.24.193.173:9002/');
+exit;
+?>
