--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<html>
-<?php
-/* This will give an error. Note the output
- * above, which is before the header() call */
-header('Location: http://118.24.193.173:9002/');
-exit;
-?>
+<script>
+  window.location.href="https://118.24.193.173:9002"
+</script>
